--- a/theme.css
+++ b/theme.css
@@ -52,7 +52,7 @@
   font-variant: var(--inline-title-variant);
   font-family: var(--inline-title-font);
   letter-spacing: -0.015em;
-  padding: 0.1em 1rem;
+  padding: 0.25em 1rem;
   color: var(--color-accent);
   background-color: var(--background-secondary-alt);
   white-space: break-spaces;
@@ -60,6 +60,7 @@
 
 .markdown-embed-link {
   color: var(--text-muted);
+  margin-top: 0.7rem;
 }
 
 .markdown-embed-link:hover {
@@ -67,16 +68,15 @@
 }
 
 .markdown-embed-content.markdown-embed-page {
-  padding-top: 2rem;
   padding: 1rem;
   padding-bottom: 0;
+  padding-top: 2rem;
   max-height: 50vh;
   overflow: auto;
 }
 
-.markdown-preview-sizer {
-  padding-top: 0.35rem;
-  padding-left: 0.35rem;
+.markdown-embed-content {
+  padding-left: 1.5rem;
 }
 
 .inline-title {
@@ -559,9 +559,9 @@ body.encore-theme-atom.theme-dark {
   --accent-h: 207;
   --accent-s: 82%;
   --accent-l: 66%;
-  --highlight-hue: 39;
-  --bold-color: var(--color-blue);
-  --italic-color: var(--color-green);
+  --bold-color: hsl(36, 96%, 82%);
+  --italic-color: hsl(189, 96%, 82%);
+  --highlight-hue: 37;
   --h1-color: var(--color-orange);
   --h2-color: var(--color-green);
   --h3-color: var(--color-cyan);
@@ -639,6 +639,109 @@ body.encore-theme-debug.theme-light {
   --color-base-25: #fc0505;
   --color-base-60: #fd0202;
 }
+body.encore-theme-atom.theme-dark {
+  --color-base-00: #272b34;
+  --color-base-20: #20242b;
+  --color-base-25: #272b34;
+  --color-base-30: #3d4453;
+  --color-base-35: #4f586b;
+  --color-base-40: #4f586b;
+  --color-base-50: #4f586b;
+  --color-base-70: #abb2bf;
+  --color-base-100: #ced2da;
+  --color-red: #e06c75;
+  --color-green-rgb: 224, 108, 117;
+  --color-green: #98c379;
+  --color-orange: #d19a66;
+  --color-yellow: #e5c07b;
+  --color-cyan: #56b6c2;
+  --color-blue: hsl(207, 82%, 66%);
+  --accent-h: 207;
+  --accent-s: 82%;
+  --accent-l: 66%;
+  --bold-color: hsl(36, 96%, 82%);
+  --italic-color: hsl(189, 96%, 82%);
+  --highlight-hue: 37;
+  --h1-color: var(--color-orange);
+  --h2-color: var(--color-green);
+  --h3-color: var(--color-cyan);
+  --h4-color: var(--color-blue);
+  --h5-color: var(--color-red);
+  --h6-color: var(--color-yellow);
+  --workspace-background-translucent: #272b34ab;
+}
+body.encore-theme-atom.theme-light {
+  --color-base-00: #fafafa;
+  --color-base-05: #ced2da;
+  --color-base-20: #eaebee;
+  --color-base-30: #ced2da;
+  --color-base-35: #4f586b;
+  --color-base-40: #4f586b;
+  --color-base-50: #272b34;
+  --color-base-70: #20242b;
+  --color-base-100: #272b34;
+  --color-red: #b95059;
+  --color-green-rgb: 224, 108, 117;
+  --color-green: #759c59;
+  --color-orange: #c78a51;
+  --color-yellow: #d3a95c;
+  --color-cyan: #42abb9;
+  --color-blue: #469de4;
+  --accent-h: 207;
+  --accent-s: 82%;
+  --accent-l: 56%;
+  --highlight-hue: 39;
+  --bold-color: var(--color-blue);
+  --italic-color: var(--color-green);
+  --h1-color: var(--color-orange);
+  --h2-color: var(--color-green);
+  --h3-color: var(--color-cyan);
+  --h4-color: var(--color-blue);
+  --h5-color: var(--color-red);
+  --h6-color: var(--color-yellow);
+  --workspace-background-translucent: #fafafa99;
+}
+body.encore-theme-everforest {
+  --color-base-00: #2f383e;
+  --color-base-20: #262626;
+  --color-base-25: #2a2a2a;
+  --color-base-30: #363636;
+  --color-base-35: #3F3F3F;
+  --color-base-40: #555;
+  --color-base-50: #666;
+  --color-base-70: #bababa;
+  --color-base-100: #dadada;
+  --interactive-before: #525c62;
+  --background-modifier-border: #525c62;
+  --text-selection: #525c62;
+  --accent-h: 254;
+  --accent-s: 96%;
+  --accent-l: 82%;
+  --bold-color: hsl(36, 96%, 82%);
+  --italic-color: hsl(189, 96%, 82%);
+  --highlight-hue: 37;
+  --h1-color: hsl(calc(var(--accent-h) + 00), 25%, 80%);
+  --h2-color: hsl(calc(var(--accent-h) + 20), 35%, 85%);
+  --h3-color: hsl(calc(var(--accent-h) + 40), 40%, 88%);
+  --h4-color: hsl(calc(var(--accent-h) + 60), 50%, 90%);
+  --h5-color: hsl(calc(var(--accent-h) + 80), 80%, 93%);
+  --h6-color: hsl(calc(var(--accent-h) + 99), 95%, 95%);
+  --workspace-background-translucent: #1e1e1ece;
+}
+body.encore-theme-everforest .cm-line.hr hr::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  background-color: var(--background-primary);
+  margin: 0 46%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' width='8' height='8' fill='none' stroke='%23ffffff90' stroke-width='3px' stroke-linecap='round' stroke-linejoin='round' class='logo-wireframe'%3E%3Cpath d='M 30.91 17.52 L 34.43 35.7 M 61.44 14.41 L 62.61 0 M 34.43 35.7 L 37.57 90.47 M 81 26.39 L 61.44 14.41 L 34.43 35.7 L 65.35 100 M 62.61 0 L 30.91 17.52 L 18 45.45 L 37.57 90.47 L 65.35 100 L 70.44 89.8 L 81 26.39 L 62.61 0 Z'%3E%3C/path%3E%3C/svg%3E");
+}
 
 .editor-colored-headers .HyperMD-header-1,
 .viewer-colored-headers .markdown-preview-view h1 {
@@ -690,6 +793,25 @@ body.encore-theme-debug.theme-light {
     background-position: 400px 0;
   }
 }
+.canvas-node-container .markdown-embed-title {
+  padding: 0;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  background: none;
+}
+.canvas-node-container .markdown-embed-link {
+  display: none;
+}
+.canvas-node-container .markdown-embed {
+  margin-bottom: 0;
+}
+.canvas-node-container .markdown-preview-sizer .markdown-embed {
+  padding-left: 1rem;
+  padding-bottom: 0.3rem;
+  padding-top: 0.3rem;
+}
+
 /* @settings
 name: Encore custom theme
 id: encore-settings
@@ -714,6 +836,9 @@ settings:
       -
         label: Dracula
         value: encore-theme-dracula
+      -
+        label: Everforest
+        value: encore-theme-everforest
   -
     id: shaded-title
     title: Shaded Title
@@ -850,6 +975,10 @@ body.theme-dark {
 }
 body.theme-light {
   --hr-color: #00000090;
+}
+
+.checkbox-container {
+  background-color: var(--interactive-before);
 }
 
 .cm-strikethrough {
@@ -994,4 +1123,17 @@ body > .tooltip.mod-top > .tooltip-arrow {
 
 body.encore-coloured-tooltip > .tooltip {
   --tooltip-edge-colour: var(--color-accent);
+}
+
+.suggestion-item.is-selected {
+  background-color: var(--text-selection);
+}
+
+::selection {
+  background-color: var(--text-selection);
+}
+
+a,
+.cm-hmd-internal-link {
+  text-decoration: none;
 }
